--- a/reflections/week01/01.md
+++ b/reflections/week01/01.md
@@ -8,12 +8,20 @@
 
 1. In your own words, why do we use Git?
 
+- It's a good way to store code and keep track of changes.
+
 2. What are the benefits of having multiple branches?
+
+- Multiple people can work on the same project without conflicting with each other.
 
 3. What is the difference between Git and GitHub
 
+- Git is the local tool per PC that pushes and pulls code up/from GitHub, which is an online repository for source code.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/day-1)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Marquees are usable still, but totally unnecessary and out of date.
