--- a/reflections/week01/02.md
+++ b/reflections/week01/02.md
@@ -8,12 +8,20 @@
 
 1. What is a Pseudo-Class and what are some of the most common ones you think you will use
 
+- A pseudo-class is a keyword added to a selector that specifies a different result under specific conditions. Some more common pseudo-classes seem to be "hover" and "required"/"optional".
+
 2. What is Specificity and how might you use it to your benefit?
 
+- Specificity is used in CSS to assign certain attributes or effects to specific elements in the HTML.
+
 3. What problems do you think you could run into if you over-utilized the !important feature?
+
+- I feel like over-utilizing !important would lead to a lot of confusion overall when building a project.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/JoeCalvi/cool-site)**
 
 Identify at least 1 takeaway from today's assignment
+
+- CSS kind of sucks if we're being totally honest.
