--- a/reflections/week01/03.md
+++ b/reflections/week01/03.md
@@ -8,12 +8,20 @@
 
 1. What is your favorite tip that you think is the most beneficial to improving your design?
 
+- The rule of 12 columns is super helpful and makes designing a website way more intuitive.
+
 2. Compile a couple resources that you think might be helpful when trying to review examples of good design ideas.
+
+- The Bootstrap website has a ton of helpful information. MDN is also really great.
 
 3. How do you think good design influences people when visiting a website and what sorts of things could you convey through design alone?
 
+- I think good design is directly correlated to perceived professionalism and a poorly designed website would lead to potential customers finding someone else.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/clone-site)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Bootstrap rules. It makes things so much more doable.
