--- a/reflections/week01/04.md
+++ b/reflections/week01/04.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of wire-framing? 
 
+- Wire-framing can save you a lot of trial and error time by giving you a good idea of what you want your site to look like without actually having to do any code for it.
+
 2. What are the different levels of detail in wire-frames and why is each one useful?
+
+- You can be as detailed as you want to be in wire-frames, but generally less detail is okay because the wire-frame is just a general map of where you want to eventually go.
 
 3. Do you think wire-frames are worth the Time, Energy, and Effort that they require? Why or Why not?
 
+- I think they're worth it mostly in the scenario where you're working with a client and need to get a good idea of what they actually want before you put in all the effort to code the site.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/good-ol-peekers/clone-collab)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Wire-framing can save you a lot of time and energy when coding by giving you a solid idea of what your end goal is before you just dive in.
