--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -8,12 +8,20 @@
 
 1. What is Scope ?
 
+"Scope" is <em>where</em> variables are available for use in the app.
+
 2. What is Hoisting ?
 
+"Hoisting" is a JavaScript mechanism where variables and function declarations are moved to the top of their scope before execution.
+
 3. In what cases might you use let vs const vs var?
+
+Var you may use for global variables that may be used throughout the app, while const and let may be more useful in specific functions or blocks.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+Without JavaScript, webpages are totally useless.
