day one repo added

--- a/reflections/week02/01.md
+++ b/reflections/week02/01.md
@@ -20,7 +20,7 @@ Var you may use for global variables that may be used throughout the app, while 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/scoreboard)**
 
 Identify at least 1 takeaway from today's assignment
 
