week2 day2 journal

--- a/reflections/week02/02.md
+++ b/reflections/week02/02.md
@@ -8,12 +8,20 @@
 
 1. What are the three ways to syntactically write a function? What are the differences in how the function acts (if any)?
 
+A function declaration defines a named function, a function expressions defines a named or anonymous function, and an arrow function is a shorter syntax for writing function expressions. The first is hoisted, and the second is not.
+
 2. What is the difference between Parameters and Arguments?
+
+Parameters are the names created in the function definition, and arguments are the values the function receives from each parameter when the function is invoked.
 
 3. What are higher order functions? Can you provide an example?
 
+A higher order function is a function that either accepts another function as a parameter or returns a function. A filter function would be an example.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/warehouse-manager)**
 
 Identify at least 1 takeaway from today's assignment
+
+Array methods are super useful for a ton of different applications.
