wednesday journals done and repo added

--- a/reflections/week02/03.md
+++ b/reflections/week02/03.md
@@ -8,12 +8,18 @@
 
 1. What are the main ways to write information to the console? Why/when should you use each style.
 
+console.log() if you're writing it in your code or just typing things out in the actual browser's dev tools. console.log() is useful for making sure things are working as you do them, and running functions in the dev tools is a good way to make sure they're doing the right things.
+
 2. Which tab allows you to see the breakdown of HTML/CSS and how can this tab be useful when debugging HTML?
+
+The elements tab, and it's helpful when figuring out spacing issues or maybe determining what's causing a sidescroll.
 
 3. Outside of writing everything to the console, what is a better way to debug your code?
 
+console.log() things regularly throughout and commit code often. The bcw snippet given to us for debugging is also really helpful for writing out your HTML/CSS.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/ice-cream-parlor)**
 
 Identify at least 1 takeaway from today's assignment
