thursday journal gtg

--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -8,12 +8,18 @@
 
 1. What are the benefits of making a plan before starting to just write the code?
 
+It's a basic outline of general logic that allows you to tackle one thing at a time and test your code in bits.
+
 2. How do you find answers when you are stuck?
+
+I usually consult the docs and try a handful of different methods and console.log() along the way.
 
 3. From the entire article what are your biggest takeaways?
 
+One block of code should never go beyond 80 lines, and if it does, then it should probably be broken down into different functions. Shorter code is better code.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/ThomF/boss-monster-lab)**
 
 Identify at least 1 takeaway from today's assignment
