week-2 quiz done

--- a/reflections/week02/04.md
+++ b/reflections/week02/04.md
@@ -23,3 +23,5 @@ One block of code should never go beyond 80 lines, and if it does, then it shoul
 **[Repo](https://github.com/ThomF/boss-monster-lab)**
 
 Identify at least 1 takeaway from today's assignment
+
+Working through logic behind certain functions with another person can be really helpful.
