day 1 journal done

--- a/reflections/week03/01.md
+++ b/reflections/week03/01.md
@@ -8,12 +8,20 @@
 
 1. What problem does using exports solve?
 
+Using exports allows you to access classes between different files.
+
 2. How does export differ from export default?
 
+Exports can be used to export several values whereas default export is used to export only a single value.
+
 3. What is a benefit of using the Module System?
+ 
+Code can be split into smaller files of self-contained functionality.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/game-night)**
 
 Identify at least 1 takeaway from today's assignment
+
+MVCS is a really difficult concept to understand and follow initially, but it will ultimately make my life easier in the long run.
