--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -8,12 +8,18 @@
 
 1. What is the purpose of Encapsulation?
 
+Encapsulation helps prevent bugs that result from a shared mutable state and can reduce tight coupling between components and the data structures they rely on.
+
 2. What were some of the problems with closures and the underscore prefix?
+
+If you use the underscore convention, you rely on the user to know what it means and to understand that you don't intend for them to use it, and many new developers don't know that.
 
 3. How do we create private variables in a ES6 Class? Why would you do this?
 
+You can create private variables by using closure-based encapsulation. You'd do this to ensure that blocks of code that aren't meant to be adjusted aren't able to be.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/vendr)**
 
 Identify at least 1 takeaway from today's assignment
