--- a/reflections/week03/03.md
+++ b/reflections/week03/03.md
@@ -8,12 +8,20 @@
 
 1. What are the two common operations that we will set in the handler?
 
+Two common operations that we set in the handler are get and set traps.
+
 2. What do you have to make sure you are doing with every Get to ensure the value does not become `undefined`?
+
+In order to avoid 'undefined', you have to make sure the get takes in its two parameters, the object and the property being accessed.
 
 3. What are some of the benefits of the proxy object that we are using in our structure for applications?
 
+Using proxy objects adds a layer of privacy between the code in the application and the standard user or the application.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/winter23_gregslist)**
 
 Identify at least 1 takeaway from today's assignment
+
+Having multiple files is really handy for staying organized on a bigger project.
