--- a/reflections/week03/04.md
+++ b/reflections/week03/04.md
@@ -8,12 +8,20 @@
 
 1. What problems does the Observer Pattern seek to solve?
 
+The observer design pattern solves the problem of keeping a bunch of elements synced with the same data.
+
 2. What are the three mechanisms of the observer pattern?
+
+The three mechanisms in the observer pattern are subscribe, unsubscribe, and broadcast. Subscribe adds new observable events; unsubscribe removes observable events; and broadcast executes all events with bound data.
 
 3. Review the code generated from the bcw-template and reflect on the proxy objects from yesterday, and your understanding of the observer pattern today. With this knowledge, explain how the magic of the bcw-template uses these two concepts to manage and update the dom.
 
+With the observer pattern, managing the DOM is much cleaner and able to be done with more reusable bits of code.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/HawkesJ02/fruitsalad)**
 
 Identify at least 1 takeaway from today's assignment
+
+Coding small and testing small is absolutely the way to go, and we suffered because we didn't live by it.
