--- a/reflections/week03/02.md
+++ b/reflections/week03/02.md
@@ -23,3 +23,5 @@ You can create private variables by using closure-based encapsulation. You'd do 
 **[Repo](https://github.com/JoeCalvi/vendr)**
 
 Identify at least 1 takeaway from today's assignment
+
+Encapsulation is good for both adding layers between the code and the user and also making blocks of code more accessible through multiple files.
