--- a/reflections/week04/01.md
+++ b/reflections/week04/01.md
@@ -8,12 +8,22 @@
 
 1. What are some of the signs and causes of `Callback Hell`?
 
+Some signs of 'callback hell' are a pyramid shape or lots of }) happening and the cause is someone writing code in a way from top to bottom in the order it would theoretically happen.
+
 2. What does the asynchronous mean and how are callbacks involved?
+
+Asyncronous basically means "wait" or "take some time then do the thing". Callbacks used with async functions are used to store functions to do at a later time.
 
 3. Summarize the 3 ways to avoid / fix `Callback Hell`
 
+keep your code shallow - give functions and variables good names
+modularize - use libraries 
+handle every single error - use try/catches and console errors
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/trivia-game)**
 
 Identify at least 1 takeaway from today's assignment
+
+Using APIs is way better and more efficient than writing out all your own data.
