week 4 day 2 done

--- a/reflections/week04/02.md
+++ b/reflections/week04/02.md
@@ -8,12 +8,20 @@
 
 1. What are the three states of a `Promise`?
 
+pending, resolved, and rejected
+
 2. How do `promise`s seek to resolve the issues of "callback hell"?
+
+using promises allows you to attach callbacks rather than pass them, allowing for much cleaner code.
 
 3. What is the difference between `.then()` and `.catch()`?
 
+.then() is used for when a promise is resolved, and .catch() is used for when a promise is rejected.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/gregslist_2)**
 
 Identify at least 1 takeaway from today's assignment
+
+Using one main API and then branching out into different files to access different chunks of the whole API is really efficient and great for data management.
