week 4 day 3 done

--- a/reflections/week04/03.md
+++ b/reflections/week04/03.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of `Async`/`Await`?
 
+The purpose is to make sure that the action we are requesting the app to do is finished before anything else in the app occurs.
+
 2. What must you do in order to  `await` a promise inside of a function?
+
+The client function must be preceded by 'async'.
 
 3. What are some of the primary benefits of `Async`/`Await`?
 
+It allows us to stop code from running until promises are fulfilled.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/pokedex)**
 
 Identify at least 1 takeaway from today's assignment
+
+An extensive API, such as the PokeAPI, can be really complicated to drill into.
