week 4 day 4 done

--- a/reflections/week04/04.md
+++ b/reflections/week04/04.md
@@ -8,12 +8,27 @@
 
 1. What does REST stand for, and in simple terms what does it mean?
 
+REpresentational State Transfer, and when a RESTful API is called, the server will transfer to the client a representation of the state of the requested resource.
+
 2. What does Stateless mean?
+
+the server does not remember anything about the user who uses the API
 
 3. What URL pattern is used when writing a RESTful API?
 
+Uniform interface
+Client — server separation
+Stateless
+Layered system
+Cacheable
+Code-on-demand
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/smithtaylord/gifted)**
 
 Identify at least 1 takeaway from today's assignment
+
+Queries can make searching through APIs a lot easier.
+
+
