week 5 day 1 done

--- a/reflections/week05/01.md
+++ b/reflections/week05/01.md
@@ -8,12 +8,20 @@
 
 1. What is the purpose of a Query String?
 
+to narrow down your search results to more specific parameters
+
 2. What is the format of a query parameter? How does it start? How do you distinguish between one parameter and the next?
+
+?example=specific_instance&next_example=other_instance
 
 3. When do you think Query parameters would be helpful when writing your server?
 
+they would be super helpful for allowing a user to search for specific items in your database
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/burger_shack)**
 
 Identify at least 1 takeaway from today's assignment
+
+there is a whole side of web development that i never really even thought about or realized existed.
