week 5 day 2 done

--- a/reflections/week05/02.md
+++ b/reflections/week05/02.md
@@ -8,12 +8,20 @@
 
 1. What are the three types of relationships?
 
+one-to-one, one-to-many, many-to-many
+
 2. What are the benefits of the traditional `linking` of relationships instead of `Embedding`
+
+linking can prevent the document size from growing too large, making pagenation easier
 
 3. What are some of the challenges faced when deciding how to manage a many-to-many relationship that ultimately drive your decision on how to create it?
 
+you have to create more models that end up mirroring each others' data, so ultimately you're just going to end up dealing with a lot more data and therefore have to create more functionality between multiple sets.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/winter23_gregslist_node)**
 
 Identify at least 1 takeaway from today's assignment
+
+mongoDb makes handling data a lot more intuitive once you understand it!
