--- a/reflections/week05/03.md
+++ b/reflections/week05/03.md
@@ -7,12 +7,20 @@
 
 1. In simple terms what is timeboxing?
 
+carving out specific chunks of time to work on specific parts of a project as to not spend too much time on one thing
+
 2. What three strategies will you implement and how?
+
+two minute rule for sure, to always resond to emails. practice and adapt, and hopefully get better at it every time. and the golden hour in order to increase my own productivity.
 
 3. Give an example of when you would have benefitted from timeboxing and how? 
 
+probably would have benefitted from timeboxing on my cookie clicker project to be honest. i got hung up on a few things for much longer than i should have and because of that didn't quite get to do everything i wanted.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/winter23_gregslist_node)**
 
 Identify at least 1 takeaway from today's assignment
+
+backend and working a database is super cool and allows you to do so much more with your application.
