--- a/reflections/week05/04.md
+++ b/reflections/week05/04.md
@@ -8,12 +8,20 @@
 
 1. What is a virtual property?
 
+a virtual property is something that exists only as a relationship between multiple schema
+
 2. When might you use a virtual property? 
+
+you would use a virtual property on something like comments/posts
 
 3. How do you search by a virtual properties value?
 
+you have to attach the virtual to the schema you want it connected to, then populate that object with the info you want from that virtual
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/intergalactic-planetary)**
 
 Identify at least 1 takeaway from today's assignment
+
+virtuals are really great for allowing you to access different objects by connecting them through relationships.
