week 6 day 1 gtg

--- a/reflections/week06/01.md
+++ b/reflections/week06/01.md
@@ -8,12 +8,20 @@
 
 1. What is Component based architecture?
 
+a method for encapsulating individual pieces of a larger use interface in self-sustaining, independent microsystems
+
 2. What are some benefits of Component based architecture?
+
+the DOM can by dynamically updated without page refresh; components are independent, which means they don't affect each other when each component is adjusted; components are also reusable
 
 3. What are some drawbacks to Component based architecture?
 
+because it works vertically and not horizontally, CBA can lead to a lack of readability due to the encapsulation of so much in one component
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/vue-playground)**
 
 Identify at least 1 takeaway from today's assignment
+
+a framework like Vue makes our lives as coders a lot easier, but comes with learning curves of its own. it'll be so worth it once i get it completely.
