week 6 day 2 gtg

--- a/reflections/week06/02.md
+++ b/reflections/week06/02.md
@@ -8,12 +8,20 @@
 
 1. What are props?
 
+props are a way for you to access variable from other files in your components
+
 2. What are props used for?
+
+accessing foreign variables in multiple components
 
 3. Where can props be used or accessed?
 
+any components in which you set them up
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/gifted-revued)**
 
 Identify at least 1 takeaway from today's assignment
+
+props make for really great reusability throughout your files
