week 6 day 3 gtg

--- a/reflections/week06/03.md
+++ b/reflections/week06/03.md
@@ -8,12 +8,20 @@
 
 1. What are lifecycle hooks? What are lifecycle hooks used for?
 
+lifecycle hooks are a way for you to see what's actually happening under the hood of your library
+
 2. How have you utilized lifecycle hooks in your afternoon projects?
+
+I've really only used the mounted hooks because I haven't found much of a purpose for the others yet
 
 3. What are mounting hooks? When might you use them?
 
+mounting hooks are used for manipulating the DOM, and I've used them for doing such in my own projects so far
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/gregslist_vue)**
 
 Identify at least 1 takeaway from today's assignment
+
+I really need to find my flow when working in Vue because I was jumping around too much and had errors for simple things because of it.
