week 6 day 4 gtg

--- a/reflections/week06/04.md
+++ b/reflections/week06/04.md
@@ -8,12 +8,20 @@
 
 1. What is a nested route?
 
+a nested route is a route you set up in your router.js that appends another param, such as an id, to the end of a route that already exists to  link to a new page
+
 2. When might you use a nested route? (other than the provided example)
 
+you would use a nested route on something like going from a profile page to that profile's image or comments or something like that
+
 3. Can you pass parameters through nested routes? When might you use them?
+
+you can use parameters, and a good example is like what we've done in class with :profileId or :blogId
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/JoeCalvi/blogger)**
 
 Identify at least 1 takeaway from today's assignment
+
+Vue is making life a lot easier now that I feel like I'm getting over the initial learning curve.
