week 7 day 1 gtg

--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -8,12 +8,20 @@
 
 1. What is Pair Programming? What are the roles and how do they work?
 
+pair programming is when two programmers code together using a single device. the person behind the keyboard is the "driver," and the person focusing on the over direction of the project is the "navigator."
+
 2. What are some benefits of Pair Programming?
+
+coding out loud is a good way to understand the concepts behind what's happening, and helping another person with code or guiding the code can help reinforce your own knowledge.
 
 3. What are some drawbacks to Pair Programming?
 
+if both people aren't actively engaged, then pair programming has no real benefits.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/week-7-checkpoint-new)**
 
 Identify at least 1 takeaway from today's assignment
+
+I was able to learn a better flow by watching jake and jeremy code backend and frontend together.
