week 7 day 2 gtg

--- a/reflections/week07/02.md
+++ b/reflections/week07/02.md
@@ -8,12 +8,20 @@
 
 1. What is Code Documentation? What are some of the ways to document code?
 
+code documentation is documention one writes to go along with their code in order to help others understand how their code works or what certain things mean. some ways to do this are a README or JSDoc
+
 2. What are some benefits of Code Documentation?
+
+it can help others understand how your code works or allow others to take build off your code or learn from your code
 
 3. How important is Code documentation and why?
 
+it's very important, especially in a team or work setting, because people are going to be working off of and adding on to your code
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/week-7-checkpoint-new)**
 
 Identify at least 1 takeaway from today's assignment
+
+clear naming conventions are super important, especially if you're working with others.
