week 7 day 3 gtg

--- a/reflections/week07/03.md
+++ b/reflections/week07/03.md
@@ -8,12 +8,20 @@
 
 1. What is a User Experience? What should be considered when developing a User Experience?
 
+UX is every interaction a user has with your website or business, with a goal of helping users be able to do what they want with your application
+
 2. What are some benefits of taking into account the User Experience?
+
+a good UX will keep users coming back and also cause them to share your application or business with others
 
 3. Why is the User Experience important?
 
+bad UX will drive people away, and no people means no $$$
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/week-7-checkpoint-new)**
 
 Identify at least 1 takeaway from today's assignment
+
+going back and forth between backend and frontend can be really nice if you're working on corresponding parts of the app.
