week 7 day 4 gtg

--- a/reflections/week07/04.md
+++ b/reflections/week07/04.md
@@ -6,12 +6,20 @@
 
 1. Which principles from this weeks reading did you implement?
 
+I definitely tried to work on good naming conventions so I always knew what I was doing and where I was.
+
 2. What went well this week?
+
+I think I finally am starting to find a good work flow for myself when coding.
 
 3. What would you do differently?
 
+I would probably time block a bit more and be more aware of how long I'm working on specific things.
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/JoeCalvi/week-7-checkpoint-new)**
 
 Identify at least 1 takeaway from today's assignment
+
+getting hung up on a bug or issue for too long can put you really behind very quickly.
