week 8 day 1 gtg

--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -8,12 +8,18 @@
 
 1. What function does a developer Portfolio provide?
 
+a portfolio is used to show off what the developer is capable of creating
+
 2. What makes a Developer Portfolio effective?
+
+all applications inside the portfolio have to demonstrate good use of coding skills and clean code
 
 3. What projects do you have that you would include in your Portfolio? Why?
 
+i would include tower and gratuities
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/TheOneTrueRy/Gratuities)**
 
 Identify at least 1 takeaway from today's work
