--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -8,12 +8,22 @@
 
 1. Why is communication on a small team important?
 
+lack of communication can cause merge errors and broken code
+
 2. What adjustments from traditional sized scrum teams need to be made to use the agile methodology effectively in a small team?
+
+sometimes more two people have to work on the same thing together
 
 3. What is the unattainable triangle? What are the tradeoffs of each side?
 
+Good service Cheap won’t be Fast
+
+Good service Fast won’t be Cheap
+
+Fast service Cheap won’t be Good
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/TheOneTrueRy/Gratuities)**
 
 Identify at least 1 takeaway from today's work
