week 8 day 3 gtg

--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -8,12 +8,18 @@
 
 1. What is Software Development Testing?
 
+testing is making sure the code is good to go and bug free before it's in the user's hands
+
 2. What are the benefits of Testing in software development?
+
+the kinks are worked out before people get a chance to notice them
 
 3. What are some potential drawbacks of Testing in software development?
 
+it can cause your project not to be out until a lot later than you had hoped
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/TheOneTrueRy/Gratuities)**
 
 Identify at least 1 takeaway from today's work
