day 4 week 8 gtg

--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -8,12 +8,23 @@
 
 1. What are the three main types of testing we can accomplish in Vue? What does each method provide?
 
+Unit Testing
+- allow you to test individual units of code in isolation
+Component Testing
+- vue components must be mounted to the DOM (either virtual or real) in order to fully assert that they are working, and  component testing frameworks give users the ability to do this in a reliable way while also providing Vue-specific conveniences
+End-To-End (E2E) Testing
+- provide coverage on what is arguably the most important aspect of an application: what happens when users actually use your applications
+
 2. What testing method do you think is the most useful? Why?
+
+E2E because it's directly related to the user and what they actually see and interact with
 
 3. What testing method do you think is the least useful? Why?
 
+unit testing because, while something may work on its own, it may have issues when it interacts with a cerain piece of code outside its unit
+
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/JoeCalvi/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/TheOneTrueRy/Gratuities)**
 
 Identify at least 1 takeaway from today's work
